--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.4.0-rc01'
-        lifecycle_version = '2.6.0'
+        compose_version = '1.4.0'
+        lifecycle_version = '2.6.1'
     }
     repositories {
         google()  // Google's Maven repository
