--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
-    id "org.jetbrains.kotlin.plugin.serialization" version "1.8.10"
+    id "org.jetbrains.kotlin.plugin.serialization" version "1.8.20"
     id "com.google.gms.google-services"
     id "kotlin-kapt"
     id "com.google.dagger.hilt.android"
@@ -46,7 +46,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.4.3"
+        kotlinCompilerExtensionVersion "1.4.6"
     }
     packagingOptions {
         resources {
@@ -56,8 +56,8 @@ android {
 }
 
 dependencies {
-    implementation platform("androidx.compose:compose-bom:2023.04.01")
-    implementation platform("com.google.firebase:firebase-bom:31.2.3")
+    implementation platform('androidx.compose:compose-bom:2023.05.00')
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
 
     implementation "com.google.firebase:firebase-analytics-ktx"
     implementation "com.google.firebase:firebase-auth-ktx"
@@ -83,13 +83,13 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.3.0"
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
-    implementation "com.google.dagger:hilt-android:2.45"
+    implementation 'com.google.dagger:hilt-android:2.46'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    kapt "com.google.dagger:hilt-compiler:2.45"
+    kapt 'com.google.dagger:hilt-compiler:2.46'
 
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0'
 
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
