--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,15 +24,12 @@ android {
             useSupportLibrary true
         }
 
-        buildConfigField("String", "LAIKS_COLLECTION", "\"laiks-test\"")
-
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-            buildConfigField("String", "LAIKS_COLLECTION", "\"laiks\"")
         }
     }
     compileOptions {
@@ -56,8 +53,8 @@ android {
 }
 
 dependencies {
-    implementation platform("androidx.compose:compose-bom:2023.04.01")
-    implementation platform("com.google.firebase:firebase-bom:31.2.3")
+    implementation platform("androidx.compose:compose-bom:2023.05.01")
+    implementation platform("com.google.firebase:firebase-bom:32.1.1")
 
     implementation "com.google.firebase:firebase-analytics-ktx"
     implementation "com.google.firebase:firebase-auth-ktx"
@@ -67,12 +64,12 @@ dependencies {
 //    implementation "com.google.firebase:firebase-crashlytics-ktx"
     implementation "com.google.firebase:firebase-analytics-ktx"
 
-    implementation "androidx.core:core-ktx:1.10.0"
-    implementation "androidx.activity:activity-compose:1.7.1"
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "androidx.activity:activity-compose:1.7.2"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation "androidx.compose.material3:material3:1.1.0-rc01"
-    implementation "androidx.compose.material3:material3-window-size-class:1.1.0-rc01"
+    implementation "androidx.compose.material3:material3:1.2.0-alpha02"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-alpha02"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -81,7 +78,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "io.coil-kt:coil-compose:2.3.0"
-    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.navigation:navigation-compose:2.6.0"
 
     implementation "com.google.dagger:hilt-android:2.45"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
