--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,12 @@ plugins {
 
 android {
     namespace "com.folkmanis.laiks"
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.folkmanis.laiks"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -37,11 +37,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "17"
     }
     buildFeatures {
         compose true
@@ -58,7 +58,7 @@ android {
 
 dependencies {
     implementation platform("androidx.compose:compose-bom:2023.08.00")
-    implementation platform("com.google.firebase:firebase-bom:32.1.1")
+    implementation platform('com.google.firebase:firebase-bom:32.2.2')
 
     implementation "com.google.firebase:firebase-analytics-ktx"
     implementation "com.google.firebase:firebase-auth-ktx"
@@ -81,12 +81,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "io.coil-kt:coil-compose:2.3.0"
+    implementation 'io.coil-kt:coil-compose:2.4.0'
     implementation "androidx.navigation:navigation-compose:2.7.0"
 
-    implementation 'com.google.dagger:hilt-android:2.46'
+    implementation 'com.google.dagger:hilt-android:2.47'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    kapt 'com.google.dagger:hilt-compiler:2.46'
+    kapt 'com.google.dagger:hilt-compiler:2.47'
 
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
@@ -95,7 +95,7 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.0"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
 
