--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
-    id "org.jetbrains.kotlin.plugin.serialization" version "1.8.20"
+    id "org.jetbrains.kotlin.plugin.serialization" version "1.9.10"
     id "com.google.gms.google-services"
     id "kotlin-kapt"
     id "com.google.dagger.hilt.android"
@@ -47,7 +47,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.4.6"
+        kotlinCompilerExtensionVersion "1.5.3"
     }
     packagingOptions {
         resources {
@@ -57,8 +57,8 @@ android {
 }
 
 dependencies {
-    implementation platform("androidx.compose:compose-bom:2023.08.00")
-    implementation platform('com.google.firebase:firebase-bom:32.2.2')
+    implementation platform("androidx.compose:compose-bom:2023.09.02")
+    implementation platform('com.google.firebase:firebase-bom:32.3.1')
 
     implementation "com.google.firebase:firebase-analytics-ktx"
     implementation "com.google.firebase:firebase-auth-ktx"
@@ -68,12 +68,12 @@ dependencies {
 //    implementation "com.google.firebase:firebase-crashlytics-ktx"
     implementation "com.google.firebase:firebase-analytics-ktx"
 
-    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "androidx.core:core-ktx:1.12.0"
     implementation "androidx.activity:activity-compose:1.7.2"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation "androidx.compose.material3:material3:1.2.0-alpha05"
-    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-alpha05"
+    implementation "androidx.compose.material3:material3:1.2.0-alpha08"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-alpha08"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -82,20 +82,20 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'io.coil-kt:coil-compose:2.4.0'
-    implementation "androidx.navigation:navigation-compose:2.7.0"
+    implementation "androidx.navigation:navigation-compose:2.7.3"
 
-    implementation 'com.google.dagger:hilt-android:2.47'
+    implementation 'com.google.dagger:hilt-android:2.48'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    kapt 'com.google.dagger:hilt-compiler:2.47'
+    kapt 'com.google.dagger:hilt-compiler:2.48'
 
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0'
 
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.0"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.2"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
 
