--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,23 +57,22 @@ android {
 }
 
 dependencies {
-    implementation platform("androidx.compose:compose-bom:2023.09.02")
-    implementation platform('com.google.firebase:firebase-bom:32.3.1')
+    implementation platform("androidx.compose:compose-bom:2023.10.01")
+    implementation platform('com.google.firebase:firebase-bom:32.4.0')
 
-    implementation "com.google.firebase:firebase-analytics-ktx"
-    implementation "com.google.firebase:firebase-auth-ktx"
+    implementation "com.google.firebase:firebase-analytics"
+    implementation "com.google.firebase:firebase-auth"
 //    implementation "com.google.android.gms:play-services-auth:20.4.1"
-    implementation "com.google.firebase:firebase-firestore-ktx"
+    implementation "com.google.firebase:firebase-firestore"
     implementation "com.firebaseui:firebase-ui-auth:8.0.2"
 //    implementation "com.google.firebase:firebase-crashlytics-ktx"
-    implementation "com.google.firebase:firebase-analytics-ktx"
 
     implementation "androidx.core:core-ktx:1.12.0"
-    implementation "androidx.activity:activity-compose:1.7.2"
+    implementation "androidx.activity:activity-compose:1.8.0"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation "androidx.compose.material3:material3:1.2.0-alpha08"
-    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-alpha08"
+    implementation "androidx.compose.material3:material3:1.2.0-alpha10"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-alpha10"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -82,7 +81,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'io.coil-kt:coil-compose:2.4.0'
-    implementation "androidx.navigation:navigation-compose:2.7.3"
+    implementation "androidx.navigation:navigation-compose:2.7.4"
+    implementation 'com.google.android.gms:play-services-ads:22.4.0'
 
     implementation 'com.google.dagger:hilt-android:2.48'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
@@ -95,7 +95,7 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.2"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.4"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
 
