--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,12 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+            buildConfigField "String", "AD_UNIT_ID", "\"ca-app-pub-6916596059834518/1104465626\""
         }
         debug {
             applicationIdSuffix ".debug"
             debuggable true
+            buildConfigField "String", "AD_UNIT_ID", "\"ca-app-pub-3940256099942544/6300978111\""
         }
     }
     compileOptions {
@@ -82,6 +84,7 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'io.coil-kt:coil-compose:2.4.0'
     implementation "androidx.navigation:navigation-compose:2.7.4"
+    implementation 'com.google.android.gms:play-services-ads:22.4.0'
 
     implementation 'com.google.dagger:hilt-android:2.48'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
