--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id "com.google.gms.google-services"
     id "kotlin-kapt"
     id "com.google.dagger.hilt.android"
-//    id "com.google.firebase.crashlytics"
+    id "com.google.firebase.crashlytics"
 }
 
 android {
@@ -16,7 +16,7 @@ android {
         applicationId "com.folkmanis.laiks"
         minSdk 26
         targetSdk 34
-        versionCode 1
+        versionCode 6
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -36,6 +36,13 @@ android {
             applicationIdSuffix ".debug"
             debuggable true
             buildConfigField "String", "AD_UNIT_ID", "\"ca-app-pub-3940256099942544/9214589741\""
+        }
+        internalTesting {
+            applicationIdSuffix ".internal"
+            buildConfigField "String", "AD_UNIT_ID", "\"ca-app-pub-3940256099942544/9214589741\""
+            debuggable false
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
     compileOptions {
@@ -60,14 +67,15 @@ android {
 
 dependencies {
     implementation platform("androidx.compose:compose-bom:2023.10.01")
-    implementation platform('com.google.firebase:firebase-bom:32.4.0')
+    implementation platform('com.google.firebase:firebase-bom:32.4.1')
 
     implementation "com.google.firebase:firebase-analytics"
     implementation "com.google.firebase:firebase-auth"
-//    implementation "com.google.android.gms:play-services-auth:20.4.1"
+    implementation "com.google.android.gms:play-services-auth:20.7.0"
     implementation "com.google.firebase:firebase-firestore"
     implementation "com.firebaseui:firebase-ui-auth:8.0.2"
-//    implementation "com.google.firebase:firebase-crashlytics-ktx"
+    implementation "com.google.firebase:firebase-crashlytics-ktx"
+    implementation "com.google.firebase:firebase-analytics-ktx"
 
     implementation "androidx.core:core-ktx:1.12.0"
     implementation "androidx.activity:activity-compose:1.8.0"
@@ -84,7 +92,7 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'io.coil-kt:coil-compose:2.4.0'
     implementation "androidx.navigation:navigation-compose:2.7.4"
-    implementation 'com.google.android.gms:play-services-ads:22.4.0'
+    implementation 'com.google.android.gms:play-services-ads:22.5.0'
 
     implementation 'com.google.dagger:hilt-android:2.48.1'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
