--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
         mavenCentral()  // Maven Central repository
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.4.0'
-//        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
+//        classpath 'com.google.gms:google-services:4.4.0'
+//        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -16,4 +16,6 @@ plugins {
     id 'com.android.library' version '8.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
     id 'com.google.dagger.hilt.android' version '2.48' apply false
+    id 'com.google.gms.google-services' version '4.4.0' apply false
+    id 'com.google.firebase.crashlytics' version '2.9.9' apply false
 }
