--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
@@ -77,12 +78,14 @@ dependencies {
     implementation "com.google.android.gms:play-services-auth:20.7.0"
     implementation "com.firebaseui:firebase-ui-auth:8.0.2"
 
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+
     implementation "androidx.core:core-ktx:1.12.0"
-    implementation "androidx.activity:activity-compose:1.8.0"
+    implementation "androidx.activity:activity-compose:1.8.1"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation "androidx.compose.material3:material3:1.2.0-alpha10"
-    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-alpha10"
+    implementation "androidx.compose.material3:material3:1.2.0-alpha11"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-alpha11"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
