--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
-    id "org.jetbrains.kotlin.plugin.serialization" version "1.9.20"
+    id "org.jetbrains.kotlin.plugin.serialization"
     id "com.google.gms.google-services"
     id "kotlin-kapt"
     id "com.google.dagger.hilt.android"
@@ -100,10 +100,6 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.49'
     implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
     kapt 'com.google.dagger:hilt-compiler:2.49'
-
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0'
 
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.6"
 
