--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         minSdk 26
         targetSdk 34
         versionCode 10
-        versionName "1.0"
+        versionName "1.0.11"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -76,7 +76,6 @@ dependencies {
     implementation "com.google.firebase:firebase-crashlytics-ktx"
     implementation "com.google.firebase:firebase-analytics-ktx"
     implementation "com.google.android.gms:play-services-auth:20.7.0"
-    implementation "com.firebaseui:firebase-ui-auth:8.0.2"
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
@@ -84,8 +83,8 @@ dependencies {
     implementation "androidx.activity:activity-compose:1.8.1"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation "androidx.compose.material3:material3:1.2.0-alpha12"
-    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-alpha12"
+    implementation "androidx.compose.material3:material3:1.2.0-beta01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-beta01"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
