--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,8 @@ android {
 }
 
 dependencies {
-    implementation platform("androidx.compose:compose-bom:2023.10.01")
-    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    implementation platform("androidx.compose:compose-bom:2024.01.00")
+    implementation platform('com.google.firebase:firebase-bom:32.7.1')
 
     implementation "com.google.firebase:firebase-analytics"
     implementation "com.google.firebase:firebase-auth"
@@ -77,8 +77,8 @@ dependencies {
     implementation "androidx.activity:activity-compose:1.8.2"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation "androidx.compose.material3:material3:1.2.0-beta02"
-    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-beta02"
+    implementation "androidx.compose.material3:material3:1.2.0-rc01"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-rc01"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -99,7 +99,7 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.4"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.0"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
 
