--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,8 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.7.6"
     implementation 'com.google.android.gms:play-services-ads:22.6.0'
 
+    implementation 'androidx.core:core-splashscreen:1.0.1'
+
     implementation 'com.google.dagger:hilt-android:2.50'
     implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
     kapt 'com.google.dagger:hilt-compiler:2.50'
