--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,4 @@
 buildscript {
-    ext {
-        lifecycle_version = '2.7.0'
-    }
     repositories {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
@@ -12,11 +9,13 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.2.2' apply false
-    id 'com.android.library' version '8.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
-    id 'com.google.dagger.hilt.android' version '2.50' apply false
-    id 'com.google.gms.google-services' version '4.4.0' apply false
-    id 'com.google.firebase.crashlytics' version '2.9.9' apply false
-    id "org.jetbrains.kotlin.plugin.serialization" version "1.9.20" apply false
+    alias(libs.plugins.application) apply(false)
+    alias(libs.plugins.library) apply(false)
+    alias(libs.plugins.dagger.hilt.android) apply(false)
+    alias(libs.plugins.google.services) apply(false)
+    alias(libs.plugins.firebase.crashlytics) apply(false)
+    alias(libs.plugins.serialization) apply(false)
+    alias(libs.plugins.org.jetbrains.kotlin.android) apply false
+    alias(libs.plugins.compose.compiler) apply false
+    alias(libs.plugins.devtools.ksp) apply false
 }
